# pytest-minimal-assertrepr-compare-example

./: .gitignore  conftest.py  pyproject.toml
tests/: base_class_separate_file.py  test_base_class_same_file.py  test_base_class_separate_file.py  test_class.py  test_function.py  utils.py
