[tool.poetry]
name = "pytest-compare-minimal"
version = "0.1.0"
description = ""
authors = ["Mikuláš Poul <mikulaspoul@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_compare_minimal"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
